[workspace]
members = [ "packages/dto","packages/main-ui"]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
description = "Incheon heroes"
edition = "2021"
repository = "https://github.com/biyard/incheon-heroes"
license = "Apache"

[workspace.dependencies]
by-components = { path = "deps/rust-sdk/packages/by-components" }
dioxus-oauth = { path = "deps/rust-sdk/packages/dioxus-oauth" }
google-wallet = { path = "deps/rust-sdk/packages/google-wallet" }
dioxus-translate = { path = "deps/rust-sdk/packages/dioxus-translate", features = ["ko"] }
dioxus-translate-macro = { path = "deps/rust-sdk/packages/dioxus-translate-macro" }
dioxus-translate-types = { path = "deps/rust-sdk/packages/dioxus-translate-types" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
slog = "2.7.0"
by-axum = { version = "0.1.7" }
easy-dynamodb = { version = "0.1.7" }
dto = { path = "./packages/dto" }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
dioxus = { version = "0.6.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
