[workspace]
members = ["packages/*"]
resolver = "2"
exclude = ["deps", "contracts"]

[workspace.package]
authors = ["Biyard"]
description = "Incheon heroes"
edition = "2024"
repository = "https://github.com/biyard/incheon-heroes"
license = "Apache"

[workspace.dependencies]
by-components = { path = "deps/rust-sdk/packages/by-components" }
dioxus-oauth = { path = "deps/rust-sdk/packages/dioxus-oauth" }
dioxus-popup = { path = "deps/rust-sdk/packages/dioxus-popup" }
dioxus-aws = { path = "deps/rust-sdk/packages/dioxus-aws" }
google-wallet = { path = "deps/rust-sdk/packages/google-wallet" }
dioxus-translate = { path = "deps/rust-sdk/packages/dioxus-translate", features = ["ko"] }
btracing = { path = "deps/rust-sdk/packages/btracing" }
rest-api = { path = "deps/rust-sdk/packages/rest-api" }
by-macros = { path = "deps/rust-sdk/packages/by-macros" }
by-axum = { path = "deps/rust-sdk/packages/by-axum" }
by-types = { path = "deps/rust-sdk/packages/by-types" }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
dto = { path = "./packages/dto" }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
dioxus = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }
dioxus-web = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }
candid = "0.10.13"
ethers = "=2.0.14"

sqlx = { version = "=0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
    "bigdecimal",
] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.crates-io]
time = { version = "=0.3.37" }